Wed Jul 30 20:27:26 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h: issue warning if libintl.h is included too early to
	avoid libintl_printf warnings under mingw.

Wed Jul 30 17:01:07 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, gtkchequer.c, gtkcube.c, gtkgame.c, gtkgame.h,
	gtkgamelist.c, gtkmovefilter.c, gtkmovelist.c, gtkpanels.c,
	gtkprefs.c, gtksplash.c, gtktempmap.c, gtktoolbar.h, gtkwindows.c:
	more deprecated gtk functions

Wed Jul 30 13:20:05 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, gtkgame.c, gtkgame.h, gtkoptions.c, gtkpanels.c,
	gtktempmap.c, gtkwindows.c: port tooltips to the gtk-2.12 version,
	which is more flexible than the old one (e.g. treeview cells). Allow
	for tips with the older gtk versions to work as well.

Wed Jul 30 12:50:47 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* play.c: show board when dice rolled if, and only if, fX or fDisplay.

Tue Jul 29 00:31:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtktheory.c: port to gtk_tree_view

Thu Jul 24 14:32:45 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkrelational.c, gtkrace.c: cleanup of deprecated gtk functions

Thu Jul 24 11:36:21 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkchequer.c, gtkgame.c, gtkprefs.c, gtkrace.c, gtktheory.c: get rid
	of deprecated functions gtk_notebook_set_page and gtk_paint_string

Wed Jul 23 11:34:27 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* set.c, gnubg.c, gtkgame.c: give a sensible error message if language
	change fails, i.e. locale unsupported.
	* gtkwindows.c: don't run gtk_widget_present(parent) if parent isn't
	realized.

Sat Jul 19 23:54:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, eval.c, osr.c: replace 6, 15 with nChequers and nPoints
	in a couple of places

Fri Jul 18 18:07:38 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, credits.sh, gnubg.c, gtkgame.c, gtkgame.h,
	relational.c, show.c: Changes to allow GTKTextWindow to be called from